--- a/public/style.css
+++ b/public/style.css
@@ -1,36 +1,85 @@
-body{
+body {
     background-color: #CDCDCD;
-    font-family: 'Lucida Bright';
-    margin: 0%;
+    margin: 0;
+    font-family: Palatino, "Palatino LT STD", "Palatino Linotype", "Book Antiqua", Georgia, serif;
 }
+
+/* Nav */
+.nav-links {}
+
+/* Canvas Graph Styling */
+.graph {
+    text-align: center;
+
+}
+
+.chartV-container {
+    align-items: center;
+}
+
+.chartC-container {
+    align-items: center;
+}
+
+.main_graphs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+label {
+    border-style: solid;
+    text-align: center;
+    border-radius: 1vh;
+    background-color: #1c42aab2;
+    color: #1c42aab2;
+    padding: 1vh;
+    font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
+
+}
+
+label h6 {
+    font-size: 2vh;
+}
+
+#totalC {
+    color: #EEFBFB;
+}
+
+#totalV {
+    color: #EEFBFB;
+}
+
 /* Navigation Bar Styling */
 nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    min-height: 8vh;
-    font-family: 'Lucida Bright';
-    background-color:  #203647;
+    background-color: #1c42aab2;
     margin-bottom: 20px;
+    height: 100px;
 }
-.logo h1{
-    font-family: 'Lucida Bright';
+
+.logo h1 {
     color: #EEFBFB;
+    font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
 }
+
 .nav-links {
     display: flex;
     justify-content: space-around;
     width: 40%;
 }
 
-.nav-links a{
-    font-family: 'Lucida Bright';
+.nav-links a {
+    font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
     color: #EEFBFB;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 20px;
 }
 
-.nav-links li{
+.nav-links li {
     list-style: none;
 }
 
@@ -38,60 +87,115 @@ nav {
     display: none;
 }
 
-.burger div{
-    width: 25px;
-    height: 3px;
+.burger div {
     border-radius: 2px;
     background-color: rgb(187, 187, 187);
     margin: 5px;
     transition: all 0.3s ease;
 }
 
-@keyframes navLinkFade{
-    from{
+.credit {
+    margin-top: 300vh;
+}
+
+@keyframes navLinkFade {
+    from {
         opacity: 0;
         transform: translateX(50px);
     }
-    to{
+
+    to {
         opacity: 1;
         transform: translate(0px);
     }
 }
 
-.toggle .line1{
-    transform: rotate(-45deg) translate(-5px,6px);
+.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
 }
 
-.toggle .line2{
+.toggle .line2 {
     opacity: 0;
 }
 
-.toggle .line3{
-    transform: rotate(45deg) translate(-5px,-6px);
+.toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
 }
 
 /* Canvas Styling */
 #div1 {
- background-color: #CDCDCD;
+    background-color: #CDCDCD;
 }
 
-#map{
+#map {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 80%;
     length: 400px;
 }
+
 h1 {
     text-align: center;
 }
 
-p{
+p {
     margin-top: 1000px;
 }
-#credit{
+
+#credit {
     margin-top: 330px;
 }
-#source{
+
+#source {
     margin-top: 20px;
+}
+
+@media screen and (max-width:1200px) {
+    #div1 {
+        display: inline;
+    }
+
+    /* bug fix */
+    html {
+        overflow-x: hidden;
+    }
+
+    /* Nav stlying*/
+    .nav-active {
+        transform: translateX(0%);
+    }
+
+    .nav-links {
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        background-color: #1c42aab2;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+        /* z-index: 50; */
+    }
+
+    .nav-links li {
+        opacity: 0;
+    }
+
+    .burger {
+        display: block;
+        cursor: pointer;
+    }
+
+    .burger div {
+        width: 25px;
+        height: 3px;
+        border-radius: 2px;
+        background-color: rgb(187, 187, 187);
+        margin: 5px;
+        transition: all 0.3s ease;
+    }
 }
