--- a/public/style.css
+++ b/public/style.css
@@ -78,6 +78,7 @@ nav {
 
 .nav-links li {
     list-style: none;
+    opacity: 0;
 }
 
 .burger {
@@ -85,10 +86,24 @@ nav {
 }
 
 .burger div {
-    border-radius: 2px;
+    width: 25px;
+    border-radius: 3px;
     background-color: rgb(187, 187, 187);
     margin: 5px;
     transition: all 0.3s ease;
+}
+
+/* burger open styling */
+.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.toggle .line2 {
+    opacity: 0;
+}
+
+.toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
 }
 
 .credit {
@@ -159,9 +174,6 @@ p {
     }
 
     /* Nav stlying*/
-    .nav-active {
-        transform: translateX(0%);
-    }
 
     .nav-links {
         position: absolute;
@@ -175,11 +187,11 @@ p {
         width: 50%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
-        /* z-index: 50; */
+        z-index: 50;
     }
 
-    .nav-links li {
-        opacity: 0;
+    .nav-active {
+        transform: translateX(0%);
     }
 
     .burger {
