--- a/public/map.css
+++ b/public/map.css
@@ -12,3 +12,23 @@
     width: 80%;
     length: 400px;
 }
+
+.wrapper {
+    max-height: 120px;
+    border: 1px solid #ddd;
+    display: flex;
+    overflow-x: hidden;
+}
+
+.wrapper::-webkit-scrollbar {
+    width: 0;
+}
+
+.wrapper .item {
+    min-width: 110px;
+    height: 110px;
+    line-height: 110px;
+    text-align: center;
+    background-color: #ddd;
+    padding-bottom: 17px;
+}
