--- a/public/map.css
+++ b/public/map.css
@@ -6,6 +6,7 @@
 }
 
 #map {
+    position: relative;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -17,12 +18,10 @@
     max-height: 120px;
     border: 1px solid #ddd;
     display: flex;
-    overflow-x: hidden;
+    overflow-x: auto;
 }
 
-.wrapper::-webkit-scrollbar {
-    width: 0;
-}
+.wrapper::-webkit-scrollbar {}
 
 .wrapper .item {
     min-width: 110px;
@@ -31,4 +30,27 @@
     text-align: center;
     background-color: #ddd;
     padding-bottom: 17px;
+}
+
+.hidden {
+    display: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
