--- a/public/map.css
+++ b/public/map.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-
-
 body {
     padding: 0;
     box-sizing: border-box;
@@ -16,13 +13,13 @@ body {
 }
 
 #map {
-    justify-content: space-around;
-    align-items: center;
-    width: 80%;
-    length: 400px;
-    position: absolute;
-    top: 25%;
+    display: block;
+    position: relative;
+    height: 80vh;
+    width: 80vw;
+    margin: 25px auto;
     z-index: 0;
+    opacity: 0.8;
 }
 
 /* Dropdown Styling */
@@ -32,7 +29,7 @@ body {
 
 .wrapper {
     position: absolute;
-    top: 20%;
+    top: 15vh;
     left: 50%;
     z-index: 1;
     transform: translate(-50%, -50%);
@@ -85,6 +82,7 @@ body {
     padding-bottom: 20px;
     text-align: center;
     border-radius: 5px;
+    vertical-align: center;
 }
 
 .wrapper .search_box .dropdown ul li:hover {
@@ -122,6 +120,10 @@ body {
     padding-left: 20px;
     padding-right: 38px;
     color: #6f768d;
+}
+
+.wrapper .search_box .search_field .input:focus {
+    background-color: rgba(225, 225, 225, 0.4)
 }
 
 .wrapper .search_box .search_field .fas {
