--- a/public/style.css
+++ b/public/style.css
@@ -79,14 +79,12 @@ nav {
     margin: 0;
     list-style: none;
     display: flex;
-    flex-direction: space-around;
-    align-items: center;
+    justify-content: space-around;
+    width: 50%;
 }
 
 .nav-links li {
-    display: flex;
     padding: 2vh;
-
 }
 
 .nav-links a {
@@ -161,11 +159,12 @@ nav {
     .nav-links {
         position: absolute;
         right: 0px;
-        height: 92vh;
+        height: 60vh;
         top: 8vh;
-        background-color: #1c42aab2;
+        background-color: #5175e0a8;
         display: flex;
         flex-direction: column;
+        justify-content: space-around;
         align-items: center;
         width: 50%;
         transform: translateX(100%);
