--- a/public/style.css
+++ b/public/style.css
@@ -12,18 +12,6 @@ body {
     align-items: center;
 }
 
-.total_vac_label {
-    background-color: #5175e0a8;
-    border-radius: 1vh;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    font-size: 20px;
-    font-style: bold;
-    color: #fff;
-    width: 40vw;
-    margin: 2vw auto;
-    padding: 2vw 0;
-}
-
 .chartC-container {
     align-items: center;
 }
@@ -52,12 +40,45 @@ body {
     position: relative;
 }
 
+
+/* VACINATION PIES STYLING*/
+
+.total_vac_label {
+    background-color: #5175e0a8;
+    border-radius: 1vh;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-size: 20px;
+    font-style: bold;
+    color: #fff;
+    width: 40vw;
+    margin: 50px auto;
+    padding: 5px 0;
+}
+
+
 .vac {
-    width: 80vw;
+    display: block;
+    width: 30vw;
     position: relative;
 }
 
-#graph1 {}
+.booster-1 {
+    display: block;
+    width: 30vw;
+    position: relative;
+}
+
+.booster-2 {
+    display: block;
+    width: 30vw;
+    position: relative;
+}
+
+.vac-pies {
+    display: flex;
+}
+
+
 
 /* used for pop-up */
 .hide {
