--- a/public/style.css
+++ b/public/style.css
@@ -43,9 +43,6 @@ body {
 
 /* VACINATION PIES STYLING*/
 
-.vac_button {
-    max-width: 400px;
-}
 
 .total_vac_label {
     background-color: #5175e0a8;
@@ -119,6 +116,10 @@ body {
     width: 100vw;
 }
 
+.button_active {
+    width: 70vw;
+    margin: 0 auto;
+}
 
 /* used for pop-up */
 .hide {
@@ -137,6 +138,10 @@ button {
     font-family: 'Raleway', sans-serif;
 }
 
+button:hover {
+    background-color: #3a5197a8;
+}
+
 /* Navigation Bar Styling */
 
 nav {
@@ -145,12 +150,21 @@ nav {
     background-color: #5175e0a8;
 }
 
-#logo {
+#logo a {
     color: #EEFBFB;
     padding: 0px 0;
     margin: 0;
     display: flex;
+    font-size: 3vh;
     align-items: center;
+    font-style: none;
+    text-decoration: none;
+    padding: 2vh;
+    border-radius: 5px;
+}
+
+#logo:hover {
+    background-color: #3a5197a8;
 }
 
 .nav-links {
@@ -163,6 +177,11 @@ nav {
 
 .nav-links li {
     padding: 2vh;
+}
+
+.nav-links li:hover {
+    background-color: #3a5197a8;
+    border-radius: 5px;
 }
 
 .nav-links a {
