--- a/public/map.css
+++ b/public/map.css
@@ -48,11 +48,19 @@ body {
     color: #000000;
     position: relative;
     cursor: pointer;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 40px;
+    border-radius: 5px;
+}
+
+.wrapper .search_box .dropdown:hover {
+    background-color: rgba(225, 225, 225, 0.4);
 }
 
 .wrapper .search_box .dropdown .default_option {
     text-transform: uppercase;
-    padding: 20px 40px;
+    white-space: nowrap;
 }
 
 .wrapper .search_box .dropdown ul {
@@ -100,8 +108,9 @@ body {
 }
 
 .wrapper .search_box .search_field {
-    width: 350px;
+    width: 100%;
     height: 100%;
+    right: 0;
     position: relative;
 }
 
@@ -118,7 +127,7 @@ body {
 }
 
 .wrapper .search_box .search_field .input:focus {
-    background-color: rgba(225, 225, 225, 0.4)
+    background-color: rgba(225, 225, 225, 0.4);
 }
 
 .wrapper .search_box .search_field .fas {
@@ -146,15 +155,6 @@ body {
 }
 
 
-.wrapper .item {
-    min-width: 110px;
-    height: 110px;
-    line-height: 110px;
-    text-align: center;
-    background-color: #ddd;
-    padding-bottom: 17px;
-}
-
 .hidden {
     display: none;
 }
@@ -181,15 +181,37 @@ body {
 
 /* MOBILE VIEW */
 @media screen and (max-width:700px) {
+    .wrapper {
+        position: absolute;
+        top: 13vh;
+        left: 50%;
+        z-index: 1;
+        transform: translate(-50%, -50%);
+        width: 80vw;
+        min-height: 65px;
+    }
+
+
+    #map {
+        display: block;
+        position: relative;
+        height: 80vh;
+        width: 80vw;
+        top: 8vh;
+        margin: 2vh auto;
+        z-index: 0;
+        opacity: 0.8;
+    }
+
     .wrapper .search_box {
-        width: 60vw;
+        width: calc(80vw - 20px);
     }
 
     .wrapper .search_box .dropdown {
-        max-width: 40vw;
+        max-width: 60vw;
     }
 
     .wrapper .search_box .search_field {
-        width: 40vw;
+        width: 100%;
     }
 }
