--- a/public/style.css
+++ b/public/style.css
@@ -176,14 +176,13 @@ nav {
 
 #logo a {
     color: #EEFBFB;
-    padding: 0px 0;
+    padding: 2vh 2vh;
     margin: 0;
     display: flex;
     font-size: 3vh;
     align-items: center;
     font-style: none;
     text-decoration: none;
-    padding: 2vh;
     border-radius: 5px;
 }
 
